--- a/src/test/resources/config/google.properties
+++ b/src/test/resources/config/google.properties
@@ -6,4 +6,5 @@ testUrl = https://www.google.com
 #Locators
 #comment from differenr users B
 searchBox = //*[@name='q']
+button = //*[@button='k']
 
